Fixing alignment of library title in Chrome.
The resulting html would render fine in Safari, but in Chrome 23.0.1271.101, the library title shifts to near the center of the page. This change anchors it to the left side of the containing element.

--- a/Templates/html/css/styles.css
+++ b/Templates/html/css/styles.css
@@ -169,6 +169,10 @@ th {
 	position: absolute;
 }
 
+#libraryTitle {
+        left: 0;
+}
+
 #top_header #library #developerHome {
 	color: #92979E;
 	right: 15px;
